syntax = "proto3";

import "proto/common.proto";

package telegraph.proto;

message ChangeSubscription {
    int32 var_id = 1;
    int32 min_interval = 2;
    int32 max_interval = 3;
}

message CancelSubscription {
    int32 var_id = 1;
}

message ChildrenRequest {
    int32 parent_id = 1;
}

message Children {
    int32 parent_id = 1;
    repeated Node children = 2;
}

message StreamEvent {
    oneof event {
        ChildrenRequest children_request = 1;
        Children children = 2;

        ChangeSubscription change_subscription = 3;
        CancelSubscription cancel_subscription = 4;

        ActionCalled action_request = 5;
        ActionCompleted action_completed = 6;
        VariableUpdate update = 7;
    }
}
